--- a/src/app/_page/kandidat/datatable-kandidat/datatable-kandidat.component.html
+++ b/src/app/_page/kandidat/datatable-kandidat/datatable-kandidat.component.html
@@ -26,28 +26,28 @@
           <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
             <div class="row">
               <div class="col-12 mb-2">
-                <label for="floatEmail">Periode</label>
-                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.periode}}</div>
+                <label for="floatEmail">Tempat Lahir</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.tmp_lahir}}</div>
               </div>
               <div class="col-12 mb-2">
-                <label for="floatEmail">Gender</label>
-                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.gender}}</div>
+                <label for="floatEmail">Tanggal Lahir</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.tgl_lahir}}</div>
               </div>
               <div class="col-12 mb-2">
-                <label for="floatEmail">Usia Minimum</label>
-                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.minAge}}</div>
+                <label for="floatEmail">Marital Status</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.marital_status}}</div>
               </div>
               <div class="col-12 mb-2">
-                <label for="floatEmail">Usia Maximum</label>
-                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.maxAge}}</div>
+                <label for="floatEmail">Telepon</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.telepon}}</div>
               </div>
               <div class="col-12 mb-2">
-                <label for="floatEmail">Pendidikan</label>
-                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementDegree}}</div>
+                <label for="floatEmail">Mobile Phone</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.hp}}</div>
               </div>
               <div class="col-12 mb-2">
-                <label for="floatEmail">Keahlian</label>
-                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementSkill}}</div>
+                <label for="floatEmail">Pengalaman</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.working_experience}}</div>
               </div>
             </div>
           </ng-template>
@@ -60,22 +60,22 @@
             </a>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Name" sortable="false" prop="nama">
+        <ngx-datatable-column name="Name" sortable="false" prop="nm_pelamar">
           <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
             <span>{{value}}</span>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Gender" sortable="false" prop="genderPelamar">
+        <ngx-datatable-column name="Gender" sortable="false" prop="gender">
           <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
             <span>{{value}}</span>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Pendidikan Terakhir" sortable="false" prop="pendidikanTerakhir">
+        <ngx-datatable-column name="Pendidikan Terakhir" sortable="false" prop="last_education">
           <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
             <span>{{value}}</span>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Job Title" sortable="false" prop="bagian">
+        <ngx-datatable-column name="Email" sortable="false" prop="email_pelamar">
           <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
             <span>{{value}}</span>
           </ng-template>
@@ -101,7 +101,7 @@
 
               <input id="file-input" type="file" />
             </span>
-            <a class="warning p-0" data-original-title="" title="" (click)="interview(value)"
+            <a class="warning p-0" *ngIf="!rows[rowIndex].hiddenEditByJadwalKandidat" data-original-title="" title="" (click)="interview(value)"
               ngbTooltip="Buat Jadwal Interview">
               <i class="ft-phone font-medium-3 mr-2"></i>
             </a>
