--- a/src/app/_page/kandidat/edit-kandidat/edit-kandidat.component.html
+++ b/src/app/_page/kandidat/edit-kandidat/edit-kandidat.component.html
@@ -1,3 +1,41 @@
+<!-- <div class="row text-left">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-10 text-left">
+            <h4 class="card-title">Lowongan Kerja</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
+            <label for="floatEmail">Tahun</label>
+            <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
+          </div>
+          <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
+            <label for="floatEmail">Periode</label>
+            <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-12 mb-2">
+            <label for="floatEmail">Divisi</label>
+            <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-12 mb-2">
+            <label for="floatEmail">Jabatan</label>
+            <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-12 mb-2">
+            <label for="floatEmail">Bagian</label>
+            <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
 <div class="row text-left">
   <div class="col-sm-12">
     <div class="card">
@@ -8,52 +46,65 @@
           </div>
         </div>
       </div>
+
       <div class="card-content">
         <div class="card-body">
-          <form class="form" #kandidat="ngForm">
+          <form class="form" (ngSubmit)="editKandidat()" #kandidat="ngForm">
             <div class="row">
               <div class="col-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Nama</label>
                   <input class="form-control input-md " autocomplete="off" #nama="ngModel" required id="nama"
                     name="nama" [(ngModel)]="dataKandidat.nama" type="text">
-                  <small class="form-text text-muted danger"
-                    *ngIf="!nama.valid && (nama.dirty || nama.touched)">Wajib
+                  <small class="form-text text-muted danger" *ngIf="!nama.valid && (nama.dirty || nama.touched)">Wajib
                     diisi!!</small>
                 </fieldset>
               </div>
-              <div class="col-12 mb-2">
+              <!-- <div class="col-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Nomor Identitas</label>
-                  <input class="form-control input-md " autocomplete="off" #nomorIdentitas="ngModel" required
-                    id="nomorIdentitas" name="nomorIdentitas" [(ngModel)]="dataKandidat.nomorIdentitas"
-                    type="number" min="1">
+                  <input class="form-control input-md " autocomplete="off" #nomorIdentitas="ngModel" id="nomorIdentitas"
+                    name="nomorIdentitas" [(ngModel)]="dataKandidat.nomorIdentitas" type="number" min="1">
                   <small class="form-text text-muted danger"
                     *ngIf="!nomorIdentitas.valid && (nomorIdentitas.dirty || nomorIdentitas.touched)">Wajib
                     diisi!!</small>
                 </fieldset>
-              </div>
+              </div> -->
               <div class="col-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Email</label>
-                  <input class="form-control input-md " autocomplete="off" #email="ngModel" required id="email"
-                    name="email" [(ngModel)]="dataKandidat.email" type="email">
+                  <input class="form-control input-md " (ngModelChange)="checkEmail($event)" autocomplete="off"
+                    #email="ngModel" required id="email" name="email" [(ngModel)]="dataKandidat.email" type="email">
                   <small class="form-text text-muted danger"
                     *ngIf="!email.valid && (email.dirty || email.touched)">Wajib
                     diisi!!</small>
+                  <small class="form-text text-muted danger" *ngIf="checkerEmail">{{messageStatusEmail}}</small>
                 </fieldset>
               </div>
               <div class="col-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Gender</label>
-                  <select id="projectinput6" [(ngModel)]="dataKandidat.gender"  #gender="ngModel" required name="gender"
+                  <select id="projectinput6" [(ngModel)]="dataKandidat.gender" #gender="ngModel" required name="gender"
                     class="form-control">
-                    <option value="pria" selected>Pria</option>
-                    <option value="wanita">Wanita</option>
+                    <option value="Pria" selected>Pria</option>
+                    <option value="Wanita">Wanita</option>
                   </select>
                   <small class="form-text text-muted danger"
                     *ngIf="!gender.valid && (gender.dirty || gender.touched)">Wajib
-                    diisi!!</small>
+                    Dipilih!!</small>
+                </fieldset>
+              </div>
+              <div class="col-12 mb-2">
+                <fieldset class="form-group">
+                  <label for="periode">Gender</label>
+                  <select id="projectinput6" [(ngModel)]="dataKandidat.statusNikah" #statusNikah="ngModel" required name="statusNikah"
+                    class="form-control">
+                    <option value="Single" selected>Single</option>
+                    <option value="MERID">Merried</option>
+                  </select>
+                  <small class="form-text text-muted danger"
+                    *ngIf="!statusNikah.valid && (statusNikah.dirty || statusNikah.touched)">Wajib
+                    Dipilih!!</small>
                 </fieldset>
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
@@ -69,8 +120,8 @@
               <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Tanggal Lahir</label>
-                  <input class="form-control input-md " autocomplete="off" #tanggalLahir="ngModel" required
-                    id="tanggalLahir" name="tanggalLahir" [(ngModel)]="dataKandidat.tanggalLahir" type="text">
+                  <input bsDatepicker class="form-control input-md " autocomplete="off" #tanggalLahir="ngModel" required
+                    id="tanggalLahir" name="tanggalLahir" [(ngModel)]="dataKandidat.tanggalLahir">
                   <small class="form-text text-muted danger"
                     *ngIf="!tanggalLahir.valid && (tanggalLahir.dirty || tanggalLahir.touched)">Wajib
                     diisi!!</small>
@@ -79,8 +130,9 @@
               <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Provinsi</label>
-                  <input class="form-control input-md " autocomplete="off" #provinsi="ngModel" required
-                    id="provinsi" name="provinsi" [(ngModel)]="dataKandidat.provinsi" type="text">
+                  <ng-select (ngModelChange)="selectProvinsi($event)" [items]="Provinsi" bindLabel="name"
+                    [(ngModel)]="dataKandidat.provinsi" name="provinsi" id="provinsi" #provinsi="ngModel">
+                  </ng-select>
                   <small class="form-text text-muted danger"
                     *ngIf="!provinsi.valid && (provinsi.dirty || provinsi.touched)">Wajib
                     diisi!!</small>
@@ -89,10 +141,10 @@
               <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Kota</label>
-                  <input class="form-control input-md " autocomplete="off" #kota="ngModel" required id="kota"
-                    name="kota" [(ngModel)]="dataKandidat.kota" type="text">
-                  <small class="form-text text-muted danger"
-                    *ngIf="!kota.valid && (kota.dirty || kota.touched)">Wajib
+                  <ng-select [items]="Kota" bindLabel="name" [(ngModel)]="dataKandidat.kota" name="kota" id="kota"
+                    #kota="ngModel">
+                  </ng-select>
+                  <small class="form-text text-muted danger" *ngIf="!kota.valid && (kota.dirty || kota.touched)">Wajib
                     diisi!!</small>
                 </fieldset>
               </div>
@@ -140,9 +192,8 @@
               <div class="col-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Keahlian</label>
-                  <textarea class="form-control" id="keahlian" name="keahlian"
-                    #keahlian="ngModel" required [(ngModel)]="dataKandidat.keahlian" rows="3"
-                    autocomplete="off"></textarea>
+                  <textarea class="form-control" id="keahlian" name="keahlian" #keahlian="ngModel" required
+                    [(ngModel)]="dataKandidat.keahlian" rows="3" autocomplete="off"></textarea>
                   <small class="form-text text-muted danger"
                     *ngIf="!keahlian.valid && (keahlian.dirty || keahlian.touched)">Wajib
                     diisi!!</small>
@@ -151,9 +202,9 @@
               <div class="col-12 mb-2">
                 <fieldset class="form-group">
                   <label for="periode">Pengalaman Kerja</label>
-                  <textarea class="form-control" id="pengalamanKerja" name="pengalamanKerja"
-                    #pengalamanKerja="ngModel" required [(ngModel)]="dataKandidat.pengalamanKerja" rows="3"
-                    placeholder="Pengalaman Kerja" autocomplete="off"></textarea>
+                  <textarea class="form-control" id="pengalamanKerja" name="pengalamanKerja" #pengalamanKerja="ngModel"
+                    required [(ngModel)]="dataKandidat.pengalamanKerja" rows="3" placeholder="Pengalaman Kerja"
+                    autocomplete="off"></textarea>
                   <small class="form-text text-muted danger"
                     *ngIf="!pengalamanKerja.valid && (pengalamanKerja.dirty || pengalamanKerja.touched)">Wajib
                     diisi!!</small>
@@ -162,7 +213,7 @@
             </div>
             <div class="form-group col-md-12 text-right">
               <button type="button" class="btn btn-success mr-2 btn-raised" (click)="cancel()">Cancel</button>
-              <button type="button" class="btn btn-danger btn-raised" [disabled]="!kandidat.valid">Submit</button>
+              <button type="submit" class="btn btn-danger btn-raised" [disabled]="!kandidat.valid">Submit</button>
             </div>
           </form>
         </div>
